crates/bin/src/gateway/tui/widgets/snapshots/chaz__gateway__tui__widgets__snapshot_tests__header_title_only.snap
---
source: crates/bin/src/gateway/tui/widgets/snapshot_tests.rs
assertion_line: 74
expression: s
---
 Settings
