crates/bin/src/gateway/tui/widgets/snapshots/chaz__gateway__tui__widgets__snapshot_tests__header_title_subtitle_and_hint.snap
---
source: crates/bin/src/gateway/tui/widgets/snapshot_tests.rs
assertion_line: 66
expression: s
---
 Peer Settings  —  carbon.peer                   [Esc back]
