crates/bin/src/gateway/tui/widgets/snapshots/chaz__gateway__tui__widgets__snapshot_tests__picker_filter_typed_one_match.snap
---
source: crates/bin/src/gateway/tui/widgets/snapshot_tests.rs
assertion_line: 150
expression: s
---
 add agent: av▎                         
  > ava                                 
                                        
                                        
  ↑↓ select · enter add · esc cancel
