crates/bin/src/gateway/tui/widgets/snapshots/chaz__gateway__tui__widgets__snapshot_tests__picker_populated_list_second_selected.snap
---
source: crates/bin/src/gateway/tui/widgets/snapshot_tests.rs
assertion_line: 134
expression: s
---
 add agent: ▎                           
    chaz                                
  > ava                                 
    researcher                          
                                        
  ↑↓ select · enter add · esc cancel
