crates/bin/src/gateway/tui/widgets/snapshots/chaz__gateway__tui__widgets__snapshot_tests__scope_strip_three_tabs_middle_selected.snap
---
source: crates/bin/src/gateway/tui/widgets/snapshot_tests.rs
assertion_line: 42
expression: s
---
 scope:  Session  ·  ava  ·  chaz
