crates/bin/src/gateway/tui/widgets/snapshots/chaz__gateway__tui__widgets__snapshot_tests__sidebar_five_items_third_selected_focused.snap
---
source: crates/bin/src/gateway/tui/widgets/snapshot_tests.rs
assertion_line: 102
expression: s
---
  Agents        
  Backends      
> Defaults      
  Bridges       
  About
